# python-training

./: .gitignore
boolean/: examples.py
bytes/: examples.py
classes/: examples.py
classes/solutions/: task_1.py  task_2.py  task_3.py  task_4.py  task_5.py
classes/tasks/: task_1.py  task_2.py  task_3.py  task_4.py  task_5.py
code_organization/examples/: every_file_is_a_module.py  examples.py
comprehensions/: examples.py
comprehensions/solutions/: task_dict_comp.py  task_dict_comp2.py  task_list_comp_filter.py  (+2 more)
context_managers/: examples.py
dataclasses/: examples.py
decorators/: examples.py
dicts/: examples.py
exceptions/: examples.py
functions/: examples.py
generators/: examples.py
ifs_and_loops/: examples.py
input_output/: examples.py
libs_overview/: example_bs4.py  example_httpx.py  example_loguru.py  example_pydantic.py  example_scrapy.md  example_selenium.py  main.py  pyproject.toml
libs_overview/example/example/: middlewares.py  settings.py
libs_overview/example/example/spiders/: blog.py
lists/: examples.py
mocks_and_patches/: tasks.md
numbers/: examples.py
python_object_model/: examples.py
sets/: examples.py
stdlib_overview/: examples.py  logging_example.py
strings/: examples.py  interpolation_examples.py
structuring_projects/: another_module.py  example.setup.py  hello.py  importing_paths.py
testing/: doctest_example.py  example_unittest.py  examples.md  tasks.md  test_example_unittest.py
tools/: main.py  pyproject.toml  unformatted.py
tuples/: examples.py
uv/: tasks.md
virtualenvs/: examples.md
(+94 files in other folders)
